--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "norbertmonti/norbertmonti.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : ""
+  avatar           : "profile.jpg"
+  name             : "Norbert Monti"
   pronouns         : # example: "she/her"  
   bio              : "I am a PhD candidate at Sciences Po, Paris."
   location         : "Paris, France"
