--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Norbert Monti"
   pronouns         : # example: "she/her"  
-  bio              : "I am a PhD candidate at Sciences Po, Paris."
+  bio              : "I am a PhD candidate at Sciences Po."
   location         : "Paris, France"
   employer         : "Sciences Po"
   uri              : # URL
